--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -48,13 +49,12 @@ nav {
 a {
   color: black;
   text-decoration: none;
-  text-decoration-color: white;
 }
 
 a:hover {
   color: grey;
   text-decoration: underline;
-  text-underline-offset: 1rem;
+  text-underline-offset: 0.3rem;
   text-decoration-color: rgb(181, 181, 181);
 }
 
@@ -90,7 +90,7 @@ a:hover {
   width: 100%;
   height: 2px;
   background-color: black;
-  transition: all 0.3 ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-links {
@@ -101,7 +101,7 @@ a:hover {
   width: fit-content;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3 ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-links a {
@@ -110,6 +110,7 @@ a:hover {
   text-align: center;
   font-size: 1.5rem;
   color: black;
+  text-decoration: none;
 }
 
 .menu-links li {
@@ -120,22 +121,36 @@ a:hover {
   max-height: 300px;
 }
 
+.hamburger-icon.open span:first-child {
+  transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
 /* SECTIONS */
 
 section {
+  display: block; /* ensures headings and content stack correctly */
   padding-top: 4vh;
+  height: auto;
   margin: 0 10rem;
-  box-sizing: border-box;
-  min-height: 96vh; /* FIXED */
+  min-height: fit-content;
 }
 
-/* PROFILE */
+/* PROFILE SECTION */
 
 #profile {
   display: flex;
   justify-content: center;
   gap: 5rem;
-  min-height: 80vh; /* FIXED */
+  flex-wrap: wrap;
+  height: auto;
 }
 
 .section__pic-container {
@@ -148,6 +163,14 @@ section {
 
 .section__text {
   align-self: center;
+  text-align: center;
+}
+
+.section__text p {
+  font-weight: 600;
+}
+
+.section__text__p1 {
   text-align: center;
 }
 
@@ -195,30 +218,56 @@ section {
   border: rgb(53, 53, 53) 0.1rem solid;
 }
 
-.btn-color-1,
+.btn-color-1:hover,
 .btn-color-2:hover {
-  background: rgb(53, 53, 53);
+  cursor: pointer;
+}
+
+.btn-color-1 {
+  background: none;
+}
+
+.btn-color-1:hover {
+  background: black;
   color: white;
 }
 
-/* ABOUT */
+.btn-color-2 {
+  background: none;
+}
+
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+/* ABOUT SECTION */
 
 #about {
   position: relative;
 }
 
-.about-containers,
-.about-details-container {
-  display: flex;
-}
-
 .about-containers {
   gap: 2rem;
   margin: 2rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .about-details-container {
+  display: flex;
+  justify-content: center;
   flex-direction: column;
+}
+
+.about-pic {
+  border-radius: 2rem;
+}
+
+.arrow {
+  position: relative;
+  margin: 2rem auto;
+  display: block;
 }
 
 .details-container {
@@ -226,19 +275,16 @@ section {
   flex: 1;
   background: white;
   border-radius: 2rem;
-  border: rgb(163, 163, 163) 0.1rem solid;
+  border: 0.1rem solid rgb(163, 163, 163);
   text-align: center;
 }
 
-.about-pic {
-  border-radius: 2rem;
-}
-
-/* EXPERIENCE */
+/* EXPERIENCE SECTION */
 
 #experience {
   position: relative;
-  padding-bottom: 6rem; /* FIXED */
+  display: block;
+  margin-bottom: 2rem;
 }
 
 .experience-sub-title {
@@ -246,31 +292,45 @@ section {
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .experience-details-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
 }
 
 .article-container {
   display: flex;
   flex-wrap: wrap;
   gap: 2.5rem;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 article {
   display: flex;
-  width: 10rem;
+  flex-direction: row;
+  align-items: center;
   gap: 0.5rem;
+  width: auto;
 }
 
-/* PROJECTS */
+article .icon {
+  cursor: default;
+}
+
+/* PROJECTS SECTION */
 
 #projects {
   position: relative;
+  display: block;
+}
+
+.color-container {
+  border-color: rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
 }
 
 .project-img {
@@ -280,72 +340,191 @@ article {
 }
 
 .project-title {
-  margin: 1rem;
+  margin: 1rem 0;
+  color: black;
+  text-align: center;
 }
 
-/* CONTACT */
+.project-btn {
+  color: black;
+  border-color: rgb(163, 163, 163);
+}
+
+/* CONTACT SECTION */
 
 #contact {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  min-height: 70vh;
+  flex-direction: column;
+  height: auto;
+  margin-bottom: 2rem;
 }
 
-/* ARROW */
-
-.arrow {
-  position: absolute;
-  right: -5rem;
-  bottom: 1rem; /* FIXED */
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: 0.1rem solid rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+  flex-wrap: wrap;
 }
 
-/* FOOTER */
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+
+.contact-info-container p {
+  font-size: larger;
+  text-align: center;
+}
+
+.contact-icon {
+  cursor: default;
+}
+
+.email-icon {
+  height: 2.5rem;
+}
+
+/* FOOTER SECTION */
 
 footer {
-  height: 26vh;
+  height: auto;
   margin: 0 1rem;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+footer nav {
+  justify-content: center;
 }
 
 footer p {
   text-align: center;
 }
 
-/* EDUCATION */
+/* EDUCATION ENTRY */
 
 .education-entry {
   margin-top: 1rem;
 }
 
 .education-entry h4 {
+  margin: 0;
   font-size: 1.1rem;
   font-weight: bold;
 }
 
+.education-entry p {
+  margin: 0.2rem 0;
+}
+
 .education-entry ul {
-  margin-left: 1.2rem;
+  margin: 0.5rem 0 0 1.2rem;
+  padding: 0;
 }
 
-/* RESPONSIVE FIXES */
+/* MEDIA QUERIES */
 
-@media (max-width: 1024px) {
-  section {
-    margin: 0 4rem;
-  }
-}
-
-@media (max-width: 768px) {
-  section {
-    margin: 0 2rem;
-  }
-
-  .arrow {
-    right: 50%;
-    transform: translateX(50%);
-  }
-
+@media screen and (max-width: 1400px) {
   #profile {
+    height: auto;
+    margin-bottom: 6rem;
+  }
+  .about-containers {
+    flex-wrap: wrap;
+  }
+  #contact,
+  #projects {
+    height: fit-content;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  #desktop-nav {
+    display: none;
+  }
+  #hamburger-nav {
+    display: flex;
+  }
+  #experience,
+  .experience-details-container {
+    margin-top: 2rem;
+  }
+  #profile,
+  .section-container {
+    display: block;
+  }
+  .arrow {
+    display: none;
+  }
+  section {
+    margin: 0 5%;
+    height: fit-content;
+  }
+  .section__pic-container {
+    width: 275px;
+    height: 275px;
+    margin: 0 auto 2rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #contact,
+  footer {
+    height: auto;
+  }
+  #profile {
+    height: auto;
+    margin-bottom: 0;
+  }
+  article {
+    font-size: 1rem;
     flex-direction: column;
     text-align: center;
   }
-}
+  footer nav {
+    height: fit-content;
+    margin-bottom: 2rem;
+  }
+  .about-containers,
+  .contact-info-upper-container,
+  .btn-container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .contact-info-container {
+    margin: 0.5rem;
+  }
+  .contact-info-container p,
+  .nav-links li a {
+    font-size: 1rem;
+  }
+  .experience-sub-title {
+    font-size: 1.25rem;
+  }
+  .logo {
+    font-size: 1.5rem;
+  }
+  .nav-links {
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+  }
+  .section__pic-container {
+    width: 46vw;
+    height: 46vw;
+    margin: 0 auto 2rem;
+  }
+  .section__text__p2 {
+    font-size: 1.25rem;
+  }
+  .title {
+    font-size: 2rem;
+  }
